2011-07-08  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/tile.jl: also exclude ignored windows from
	tiling

	* man/sawfish.texi: updated EA docs

2011-07-02  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/tile.jl: make interactive call tile-windows
	work again

2011-06-27  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/conf.jl: define before/after-edge-action-hook
	here

	* lisp/sawfish/wm/edge/actions.jl: improved passing of while-moving
	flag to edge-actions

	* lisp/sawfish/wm/edge/flip.jl: split up code for flip-viewport and
	flip-workspace

	* lisp/sawfish/wm/edge/flip.jl
	* lisp/sawfish/wm/edge/hot-spot.jl
	* lisp/sawfish/wm/edge/tile.jl
	* lisp/sawfish/wm/edge/viewport-drag.jl: call
	before/after-edge-action-hook from the proper places

2011-06-02  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/actions.jl: added before-edge-action-hook and
	after-edge-action-hook. Fixed logic of blocking actions while
	mousetrapping

	* lisp/sawfish/wm/autoload.jl: drop edge-flip-invoke and
	viewport-drag-invoke from list

	* lisp/sawfish/wm/edge/tile.jl: added command definition

2011-05-31  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/actions.jl: don't exec any edge-action, while
	mousetrapping is active (new feature in misc-1.9 branch)

2011-05-28  Jeremy Hankins <nowan@nowan.org>
	* lisp/sawfish/wm/edge/flip.jl
	* lisp/sawfish/wm/edge/hot-spots.jl: EF/HS/HM timers are no
	longer started if a timer is already running; fixes bug where
	flip-viewport would jump multiple viewports.

2011-05-14  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/flip.jl: only call after-flip for
	flip-workspace. set scroll-viewport-steps to 1 for flip-viewport
	while-moving (no hang when viewport-boundary-mode 'dynamic)

	* lisp/sawfish/wm/edge/actions.jl: add while-moving key-value

	* lisp/sawfish/wm/edge/tile.jl: call fake-release-window when tiling