@@ -4972,6 +4972,7 @@ Sawfish does not tile all windows visible. It filters by given rules:
 - only current visible viewport
 - exclude iconified windows
 - exclude ignored windows
+- exclude windows with @code{never-tile} matcher
 
 @defun tile-windows
 Interactive command to manually tile windows.
@@ -4979,6 +4980,10 @@ Interactive command to manually tile windows.
 
 @defun tile-windows-core edge while-moving
 Internal function to tile windows when activating an edge.
+@end defun
+
+@defun window-never-tile-p w
+Returns whether window should be tiled or not.
 @end defun
 
 HotSpots (@code{sawfish.wm.edge.hot-spots}):
