@@ -1,6 +1,8 @@
 2011-07-08  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/edge/tile.jl: also exclude ignored windows from
-	tiling
+	tiling. added window-never-tile-p
+
+	* lisp/sawfish/wm/ext/match-window.jl: added never-tile window-matcher
 
 	* man/sawfish.texi: updated EA docs
 
